# workon

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml  clippy.toml  deny.toml
.github/workflows/: ci.yml  release.yml
examples/: generate_assets.rs
layouts/: workon.kdl
scripts/: stats.sh
shell/: init.sh
specs/: no-active-sessions-bug.md
src/: claude_trust.rs  cli.rs  deps.rs  home.rs  layout.rs  main.rs  resolve.rs  session.rs  workspace.rs
src/vcs/: git.rs  jj.rs  mod.rs
tests/: cli.rs
